# pass

./: .gitignore  Cargo.toml  README.md  api-design.txt  docker-compose.yml
.github/workflows/: build.yml
frontend/: Caddyfile  Dockerfile  index.html  main.css  main.js
frontend/src/: index.html  main.css  main.js
heaven/: Dockerfile  README.md  heaven.cabal  package.yaml  stack.yaml
heaven/app/: Main.hs
heaven/src/: Api.hs  Server.hs  Types.hs
heaven/test/: test.hs
hell/: Dockerfile  game.go  go.mod  main.go
infra/: frontend-deployment.yml  image-policies.yml  image-repositories.yml  image-update-automation.yml  kustomization.yml  namespace.yml  services.yml  sketch-deployment.yml  sketch-service.yml  snake-deployment.yml  snake-ingress.yml
infra/flux-system/: gotk-sync.yaml
infra/frontend/: deployment.yml  image-policy.yml  image-repository.yml
infra/heaven/: deployment.yml  image-policy.yml  image-repository.yml  ingress.yml  service.yml
infra/hell/: deployment.yml  image-policy.yml  image-repository.yml  ingress.yml  service.yml
infra/rick/: deployment.yml  image-policy.yml  image-repository.yml  ingress.yml  service.yml
infra/sketch/: deployment.yml  image-policy.yml  image-repository.yml  ingress.yml
infra/snake/: deployment.yml  image-policy.yml  image-repository.yml  (+1 more)
jormungandr/: Cargo.toml
jormungandr/src/: api.rs  main.rs  snake.rs
rick/: Dockerfile  main.py
rust-backend/: Cargo.toml
rust-backend/src/: api.rs  lib.rs  main.rs  snake.rs
sketch/: Dockerfile  main.ts
snake/: Dockerfile
star/: Dockerfile  main.py
(+13 files in other folders)
