[package]
name = "pass"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.19"
tokio = { version = "1.29", features = ["macros", "net", "rt-multi-thread", "time"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
